# python-spacy-starter-kit

./: Dockerfile  README.md  load-space.py  my-space.py  pyproject.toml
